--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 .container {
-  width: min(90%, 1100px);
+  width: min(90%, 1000px);
   margin: 0 auto;
 }
 
@@ -49,6 +49,13 @@ p {
   line-height: 1.2;
 }
 
+h1,
+h2,
+h3 {
+  margin: 0;
+  line-height: 1.2;
+}
+
 button {
   background: none;
   border: none;
@@ -61,14 +68,18 @@ button {
 }
 
 .cta {
-  padding: 0.5rem;
-  width: 130px;
+  padding: 0.6rem 1rem;
   border-radius: 8px;
   text-align: center;
-  transition: transform 0.25s ease;
+  transition: transform 0.2s ease;
   font-size: 0.9rem;
 }
 
+@media (hover: hover) {
+  .cta:hover {
+    transform: scale(0.98);
+  }
+}
 .logo {
   width: 8rem;
 }
@@ -102,10 +113,10 @@ button {
 #main-header {
   height: 100vh;
 }
-#main-header .top {
+#main-header .nav-area {
   height: 15%;
 }
-#main-header .top .container {
+#main-header .nav-area .container {
   justify-content: space-between;
   height: 100%;
 }
@@ -117,11 +128,10 @@ button {
 }
 @media (hover: hover) {
   #main-header .menu-btn:hover,
-#main-header .close-btn:hover,
-#main-header .cta:hover {
-    transform: scale(1.05);
+#main-header .close-btn:hover {
+    transform: scale(1.1);
   }
-  #main-header a:hover {
+  #main-header a:not(a.cta):hover {
     font-weight: bold;
   }
 }
@@ -186,9 +196,8 @@ button {
 
 .hero {
   height: 85%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  display: grid;
+  place-content: center;
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/banner.jpg);
   background-size: cover;
   background-position: center;
@@ -201,7 +210,7 @@ button {
   gap: 1rem;
   text-align: center;
 }
-@media (min-width: 750px) {
+@media (min-width: 768px) {
   .hero .container {
     flex-direction: row;
     gap: 5rem;
@@ -211,6 +220,7 @@ button {
 }
 .hero a.bg-white {
   background-color: white;
+  border: 1px solid white;
   color: #8c0a2e;
 }
 .hero a.bg-transparent {
@@ -218,30 +228,29 @@ button {
   color: white;
 }
 .hero .cup-img {
-  width: 8rem;
+  height: 12rem;
 }
-.hero h2 {
-  margin-bottom: 1rem;
+.hero .sub-title {
+  margin: 0.5rem 0;
 }
 .hero .intro {
-  max-width: 500px;
-  line-height: 1.5;
+  max-width: 600px;
+  line-height: 1.3;
 }
 .hero .ctas {
   justify-content: center;
   gap: 1rem;
   margin-top: 1rem;
 }
-@media (min-width: 750px) {
+@media (min-width: 768px) {
   .hero .ctas {
-    flex-direction: row;
     justify-content: left;
   }
   .hero .cup-img {
-    width: 15rem;
+    height: 25rem;
   }
   .hero .title {
-    font-size: 3rem;
+    font-size: 4rem;
   }
 }
 
