--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -1,5 +1,5 @@
 .container {
-  width: min(90%, 1100px);
+  width: min(90%, 1000px);
   margin: 0 auto;
 }
 
@@ -12,6 +12,12 @@ a {
 }
 
 p {
+  line-height: 1.2;
+}
+h1,
+h2,
+h3 {
+  margin: 0;
   line-height: 1.2;
 }
 
@@ -27,12 +33,17 @@ button {
 }
 
 .cta {
-  padding: 0.5rem;
-  width: 130px;
+  padding: 0.6rem 1rem;
   border-radius: 8px;
   text-align: center;
-  transition: transform 0.25s ease;
+  transition: transform 0.2s ease;
   font-size: 0.9rem;
+}
+
+@media (hover: hover) {
+  .cta:hover {
+    transform: scale(0.98);
+  }
 }
 
 .logo {
