--- a/scss/_main-header.scss
+++ b/scss/_main-header.scss
@@ -1,7 +1,7 @@
 #main-header {
   height: 100vh;
 
-  .top {
+  .nav-area {
     height: 15%;
 
     .container {
@@ -19,12 +19,11 @@
 
   @media (hover: hover) {
     .menu-btn:hover,
-    .close-btn:hover,
-    .cta:hover {
-      transform: scale(1.05);
+    .close-btn:hover {
+      transform: scale(1.1);
     }
 
-    a:hover {
+    a:not(a.cta):hover {
       font-weight: bold;
     }
   }
@@ -99,10 +98,9 @@
 
 .hero {
   height: 85%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+  display: grid;
+  place-content: center;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     url(../images/banner.jpg);
   background-size: cover;
   background-position: center;
@@ -115,7 +113,7 @@
     gap: 1rem;
     text-align: center;
 
-    @media (min-width: 750px) {
+    @media (min-width: 768px) {
       flex-direction: row;
       gap: 5rem;
       text-align: left;
@@ -125,6 +123,7 @@
 
   a.bg-white {
     background-color: white;
+    border: 1px solid white;
     color: #8c0a2e;
   }
 
@@ -134,16 +133,16 @@
   }
 
   .cup-img {
-    width: 8rem;
+    height: 12rem;
   }
 
-  h2 {
-    margin-bottom: 1rem;
+  .sub-title {
+    margin: 0.5rem 0;
   }
 
   .intro {
-    max-width: 500px;
-    line-height: 1.5;
+    max-width: 600px;
+    line-height: 1.3;
   }
 
   .ctas {
@@ -152,17 +151,16 @@
     margin-top: 1rem;
   }
 
-  @media (min-width: 750px) {
+  @media (min-width: 768px) {
     .ctas {
-      flex-direction: row;
       justify-content: left;
     }
     .cup-img {
-      width: 15rem;
+      height: 25rem;
     }
 
     .title {
-      font-size: 3rem;
+      font-size: 4rem;
     }
   }
 }
