--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -3,6 +3,64 @@
   margin: 0 auto;
 }
 
+.a11y-slider-container {
+  max-width: 600px;
+  // margin: 0 auto;
+}
+
+.slider {
+  display: flex;
+  gap: 1rem;
+}
+
+.slider > * {
+  width: 100%;
+  flex: 0 0 auto;
+}
+
+.a11y-slider-dots {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 1rem;
+}
+
+.a11y-slider-dots li {
+  display: block;
+  width: 15px;
+  height: 15px;
+  // border-radius: 50%;
+  padding: 0;
+  margin: 0;
+}
+
+.a11y-slider-dots li button {
+  display: block;
+  text-indent: -9999px;
+  border: 1px solid var(--clr-title) !important;
+  width: 100%;
+  height: 100%;
+  border-radius: 100%;
+}
+
+.a11y-slider-dots li button.active {
+  background-color: var(--clr-title);
+}
+
+@media (min-width: 35em) {
+  // .slider > * {
+  //   width: 75%;
+  //   background-color: lightgray;
+  // }
+}
+
+@media (min-width: 50em) {
+  .slider > * {
+    width: 100%;
+  }
+}
+
 ul {
   list-style: none;
 }
@@ -33,46 +91,18 @@ button {
 }
 
 .cta {
-  padding: 0.6rem 1rem;
-  border-radius: 8px;
-  text-align: center;
-  transition: transform 0.2s ease;
-  font-size: 0.9rem;
-}
-
-@media (hover: hover) {
-  .cta:hover {
-    transform: scale(0.98);
-  }
+  padding: 0.6rem 0.8rem;
+  border-radius: 4px;
+  font-size: 1rem;
+  transition: all 0.25s ease;
 }
 
 .logo {
   width: 8rem;
 }
 
-.section__header {
-  justify-content: space-between;
-  padding-bottom: 1.5rem;
-}
-
 .section__title {
-  color: #930b2f;
-}
-
-.controls {
-  gap: 4rem;
-}
-
-.next-btn,
-.prev-btn {
-  font-weight: bold;
-  font-size: 1.5rem;
-  color: #130f26;
-}
-
-@media (hover: hover) {
-  .next-btn:hover,
-  .prev-btn:hover {
-    transform: scale(1.1);
-  }
+  color: var(--clr-title);
+  margin-bottom: 1.5rem;
+  font-size: 2rem;
 }
