--- a/scss/_groups.scss
+++ b/scss/_groups.scss
@@ -1,48 +1,32 @@
 #groups-section {
-  // height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 4rem 0;
-
-  .groups {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    overflow-x: auto;
-    scroll-behavior: smooth;
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  }
-
-  .groups > * {
-    flex-basis: 100%;
-  }
+  padding: 3rem 0;
 
   .group {
     border: 2px solid rgba(83, 8, 29, 0.7);
-    padding: 1rem 0;
-    border-radius: 8px;
-    min-width: 270px;
-    // height: 300px;
+    padding: 1.5rem 2rem;
+    border-radius: 5px;
     flex-direction: column;
   }
 
   .group__title {
-    color: #930b2f;
-    border-bottom: 2px solid #930b2f;
+    color: var(--clr-light);
+    border-bottom: 2px solid var(--clr-light);
+    width: max-content;
+    font-size: 1.3rem;
   }
 
   .group__list > * {
-    margin: 0.8rem 0;
+    margin: 0.8rem 0 0 0;
     display: flex;
     align-items: center;
     gap: 1rem;
   }
 
+  .group__list span {
+    font-size: 1.3rem;
+  }
+
   .flag-img {
-    width: 1.5rem;
+    width: 2rem;
   }
 }
