--- a/scss/_main-header.scss
+++ b/scss/_main-header.scss
@@ -1,41 +1,26 @@
 #main-header {
-  height: 100vh;
-
   .nav-area {
-    height: 15%;
+    padding: 1rem 0;
 
     .container {
       justify-content: space-between;
-      height: 100%;
     }
   }
 
   .menu-btn,
   .close-btn {
-    font-size: 1.3rem;
-    color: #3c0214;
+    font-size: 1.2rem;
+    color: var(--clr-dark);
     transition: transform 0.2s ease;
-  }
-
-  @media (hover: hover) {
-    .menu-btn:hover,
-    .close-btn:hover {
-      transform: scale(1.1);
-    }
-
-    a:not(a.cta):hover {
-      font-weight: bold;
-    }
   }
 
   .nav {
     position: fixed;
-    background: rgba(0, 0, 0, 0.8);
-    background: white;
+    background: var(--clr-white);
     top: 0;
     left: 0;
-    width: 70%;
-    max-width: 400px;
+    width: 50%;
+    max-width: 300px;
     height: 100%;
     z-index: 2;
     transition: transform 0.5s ease;
@@ -46,6 +31,7 @@
     position: absolute;
     right: 2rem;
     top: 2rem;
+    font-size: 2rem;
   }
 
   .nav.display {
@@ -54,19 +40,38 @@
 
   .nav__list {
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.2rem;
     margin-top: 5rem;
     padding: 1rem;
 
     a {
-      color: #3c0214;
+      color: var(--clr-dark);
+      font-weight: 400;
       font-size: 1rem;
+      display: inline-block;
     }
 
     a.cta {
-      background: #8c0a2e;
-      color: white;
-      display: inline-block;
+      background: var(--clr-light);
+      color: var(--clr-white);
+
+      @media (hover: hover) {
+        &:hover {
+          background: var(--clr-dark);
+        }
+      }
+    }
+  }
+
+  @media (hover: hover) {
+    .menu-btn:hover,
+    .close-btn:hover {
+      transform: scale(1.1);
+    }
+
+    a:not(a.cta):hover {
+      // font-weight: bold;
+      color: var(--clr-light);
     }
   }
 
@@ -84,9 +89,9 @@
 
     .nav__list {
       flex-direction: row;
-      gap: 1.5rem;
       margin: 0;
       padding: 0;
+      gap: 2rem;
     }
 
     .close-btn,
@@ -96,71 +101,99 @@
   }
 }
 
-.hero {
-  height: 85%;
+.banner {
+  padding: 4rem 2rem;
   display: grid;
   place-content: center;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
-    url(../images/banner.jpg);
+  // background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+  //   url(../images/banner.jpg);
+  background-image: url(../images/banner.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
-  color: white;
+  color: var(--clr-white);
 
-  .container {
+  &::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+
+  .content {
     flex-direction: column;
-    gap: 1rem;
     text-align: center;
+    gap: 2rem;
+    position: relative;
 
     @media (min-width: 768px) {
       flex-direction: row;
       gap: 5rem;
       text-align: left;
-      justify-content: space-around;
+      // justify-content: space-around;
     }
   }
 
   a.bg-white {
-    background-color: white;
-    border: 1px solid white;
-    color: #8c0a2e;
+    background-color: var(--clr-white);
+    color: var(--clr-light);
+    border: 1px solid transparent;
+
+    &:hover {
+      background: transparent;
+      color: var(--clr-white);
+      border: 1px solid var(--clr-white);
+    }
   }
 
   a.bg-transparent {
-    border: 1px solid white;
-    color: white;
+    border: 1px solid var(--clr-white);
+    color: var(--clr-white);
+
+    &:hover {
+      background: var(--clr-white);
+      color: var(--clr-light);
+    }
   }
 
   .cup-img {
-    height: 12rem;
+    height: 10rem;
+  }
+
+  .title {
+    letter-spacing: 5px;
   }
 
   .sub-title {
-    margin: 0.5rem 0;
+    margin: 0.2rem 0 0.5rem 0;
   }
 
   .intro {
-    max-width: 600px;
-    line-height: 1.3;
+    max-width: 400px;
+    line-height: 1.5;
+    font-size: 1rem;
   }
 
-  .ctas {
+  .action-links {
     justify-content: center;
-    gap: 1rem;
+    gap: 1.5rem;
     margin-top: 1rem;
   }
 
   @media (min-width: 768px) {
-    .ctas {
+    .action-links {
       justify-content: left;
     }
     .cup-img {
-      height: 25rem;
+      height: 22rem;
     }
 
     .title {
-      font-size: 4rem;
+      font-size: 3.5rem;
     }
   }
 }
