--- a/scss/_stadiums.scss
+++ b/scss/_stadiums.scss
@@ -1,29 +1,11 @@
 #stadiums-section {
   padding: 3rem 0;
 
-  .stadiums {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    overflow-x: auto;
-    scroll-behavior: smooth;
-
-    &::-webkit-scrollbar {
-      display: none;
-    }
-  }
-
-  .stadiums > * {
-    flex-basis: 100%;
-  }
-
   .stadium {
-    min-width: 300px;
-    max-width: 300px;
-    height: 13.75rem;
-    border-radius: 8px;
+    border-radius: 5px;
     position: relative;
     overflow: hidden;
+    height: 18rem;
 
     &::before {
       content: "";
@@ -32,7 +14,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.3);
+      // background-color: rgba(0, 0, 0, 0.3);
     }
   }
 
@@ -41,6 +23,19 @@
     position: absolute;
     left: 1rem;
     bottom: 1rem;
+
+    h3,
+    h4 {
+      letter-spacing: 2px;
+      padding: 0;
+      margin: 0;
+    }
+
+    h4 {
+      display: flex;
+      align-items: center;
+      gap: 0.25rem;
+    }
 
     .capacity {
       font-size: 0.8rem;
